[package]
name = "aide-axum-typed-multipart"
version = "0.13.0"
edition = "2021"
authors = ["emonadeo"]
keywords = ["web", "axum", "multipart"]
repository = "https://github.com/tamasfe/aide"
license = "MIT OR Apache-2.0"
description = "Type safe multipart/form-data handling for axum and aide"
readme = "README.md"

[dependencies]
aide = { registry = "elleci", version = "0.13", path = "../aide" }
axum = "0.7"
axum_typed_multipart = { version = "0.11" }
indexmap = "2"
schemars = "0.8"

[dev-dependencies]
bytes = "1"
schemars = { version = "0.8" , features = ["bytes"]}
