[package]
name = "aide-macros"
version = "0.15.0+frk.8" # remember to update the dependency in aide, even for patch releases
authors = ["tamasfe"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Macros for the Aide library"

publish = ["elleci"]

[lib]
proc-macro = true

[dependencies]
darling = "0.20"
quote = "1"
syn = "2"
proc-macro2 = "1"

[features]
axum-extra-typed-routing = []
