[package]
name = "axum-jsonschema"
version = "0.8.0"
edition = "2021"
authors = ["tamasfe"]
keywords = ["web", "axum", "json"]
repository = "https://github.com/tamasfe/aide"
license = "MIT OR Apache-2.0"
description = "Request JSON schema validation for axum"
readme = "README.md"

[dependencies]
aide = { version = "0.13.3-frk1", path = "../aide", optional = true, features = [
    "axum",
] }
async-trait = "0.1"
axum = { version = "0.7", default-features = false, features = ["json"] }
http = "1"
http-body = "1"
itertools = "0.12"
jsonschema = { version = "0.17", default-features = false }
schemars = { version = "0.8", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_path_to_error = "0.1"
tracing = "0.1"
