[package]
name = "axum-jsonschema"
version = "0.8.0+frk.5"
edition = "2021"
authors = ["tamasfe"]
keywords = ["web", "axum", "json"]
repository = "https://github.com/tamasfe/aide"
license = "MIT OR Apache-2.0"
description = "Request JSON schema validation for axum"
readme = "README.md"

publish = ["elleci"]

[dependencies]
aide = { registry = "elleci", version = "0.14", path = "../aide", optional = true, features = ["axum-json"] }
axum = { version = "0.8", default-features = false, features = ["json"] }
http = "1"
itertools = "0.14"
jsonschema = { version = "0.28", default-features = false }
schemars = { version = "0.8", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_path_to_error = "0.1"
tracing = "0.1"
